import org.gradle.plugins.ide.eclipse.model.AccessRule


plugins {
    id 'java'
    id 'eclipse'
    id 'maven'
    id 'jacoco'
}

repositories {
    mavenLocal()
    mavenCentral()
 }




jacoco {
    toolVersion = "0.8.5"
}



jacocoTestReport {
    reports {
        xml.enabled true
        csv.enabled false
        html.enabled true
    }
}


/*
jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.5
            }
        }

        rule {
            enabled = false
            element = 'CLASS'
            includes = ['io.github.*','com.rockit.*']

            limit {
                counter = 'LINE'
                value = 'TOTALCOUNT'
                maximum = 0.3
            }
        }
    }
}
*/




test {
      description = 'Run all SmallTests'
      jvmArgs '-XX:MaxPermSize=256m'
      minHeapSize = "512m" 
      maxHeapSize = "512m"
      include "**/*Test.class"
      exclude '**/*Integration.class'
      exclude '**/*IntegrationTest.class'
      exclude '**/*IT.class'
}

eclipse {
    classpath {
    
        file {
            whenMerged {
                def jre = entries.find { it.path.contains 'org.eclipse.jdt.launching.JRE_CONTAINER' }
                jre.accessRules.add(new AccessRule('0', '**/rowset/**'))
                jre.accessRules.add(new AccessRule('0', 'com/**'))
                jre.accessRules.add(new AccessRule('0', 'sun/**'))
            }
        }
        downloadJavadoc = true
        downloadSources = true
    }
}

dependencies {
    compile 'com.oracle.ojdbc:ojdbc8_g:19.3.0.0'
    compile 'com.ibm.db2.jcc:db2jcc:db2jcc4'
    compile 'com.ibm.mq:com.ibm.mq.allclient:9.1.4.0'
    compile 'org.yaml:snakeyaml:1.25'
    compile 'junit:junit:4.12'
    compile 'log4j:log4j:1.2.17'
    compile 'org.apache.httpcomponents:httpclient:4.5'
	compile 'org.xmlunit:xmlunit-core:2.1.0'  
    compile 'com.google.guava:guava:27.0-jre'
  	compile 'com.jcraft:jsch:0.1.54'
    compile 'commons-io:commons-io:2.4'	
    compile 'org.json:json:20160810' //for newer version the null key for responseCode by HTTPConnector#urlConnection.getHeaderFields() makes problems //TODO migration + junit       
	compile 'org.apache.commons:commons-text:1.8'     
	compile 'info.picocli:picocli:4.2.0'
	compile 'org.fusesource.jansi:jansi:1.18'

}

archivesBaseName='test.rockitizer'
group = 'io.github.rockitconsulting'
version = project.hasProperty('projVersion') ? project.projVersion :'1.0.5.3-SNAPSHOT'
System.out.println("---->" + version)
sourceCompatibility = '1.8'
targetCompatibility = '1.8'


task createFatJar(type: Jar) {
    manifest {
        //attributes 'Main-Class': 'com.baeldung.fatjar.Application'
    }
    baseName = 'test.rockitizer-fatJar'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

